# netlist-mcp

./: .gitignore  .mcp.json  Cargo.toml  test_audit.py  test_design_overview.py  test_find_components.py  test_get_component.py  test_get_net.py  test_get_pin.py  test_list_subsystems.py  test_neighbors.py  test_path_between.py  test_walk.py
src/: design.rs  kicad_parser.rs  main.rs  netlist.rs  parser.rs
src/parser/: kicad_parser.rs  kicad_scanner.rs  netlist.rs
